# lgcns-mlops-bike-sharing

./: README.md  batch_prediction.py  pyproject.toml  train.py
artifacts/: MLmodel  model.pkl
data/storage/: bike_sharing_train_features.csv
mlruns/0/: meta.yaml
mlruns/550158700966185024/: meta.yaml
mlruns/550158700966185024/09098fda788a43b9863245d0aab0bd6b/: meta.yaml
mlruns/550158700966185024/0cf243d4f1ce49f99cbf516069a94399/: meta.yaml
mlruns/550158700966185024/2bd2b399ac4c4cc1887c54a956d0bbf0/: meta.yaml
mlruns/550158700966185024/305f761aab2c4f0aa5d4420939101281/: meta.yaml
mlruns/550158700966185024/31681e385390419fadf65a03a4e16b81/: meta.yaml
mlruns/550158700966185024/38298bd0539d4064b3934e89918e43f6/: meta.yaml
mlruns/550158700966185024/51f374ace9a24e62aef623a9b5861974/: meta.yaml
mlruns/550158700966185024/56b1ceada5d948f3975f275d26e3f563/: meta.yaml
mlruns/550158700966185024/5aaec891502842e2b85b29d184aa9c3a/: meta.yaml
mlruns/550158700966185024/6b1dba34653545ab85ba976d784ddce7/: meta.yaml
mlruns/550158700966185024/6d40b5f9e8804ccc89222c5caa692b41/: meta.yaml
mlruns/550158700966185024/7224f8d43cb34d889499d1556504ffdb/: meta.yaml
mlruns/550158700966185024/7a0e79e027e54ef9bec13777e56336c6/: meta.yaml
mlruns/550158700966185024/94962ee43c8442ca905c910783012256/: meta.yaml
mlruns/550158700966185024/a0aa2504c1974eee868b3b5b31fec482/: meta.yaml
mlruns/550158700966185024/a85da0a05ae44ab5bef460d4280c4ffa/: meta.yaml
mlruns/766812927923572660/: meta.yaml
src/common/: logger.py
(+177 files in other folders)
