[project]
name = "lgcns-mlops-bike-sharing"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "chaerimmm55", email = "51280253+chaerimmm55@users.noreply.github.com"},
]
dependencies = [
    "bentoml>=1.2.6",
    "scikit-learn>=1.3.2",
    "pandas>=2.1.4",
    "numpy>=1.26.4",
    "mlflow>=2.11.1",
    "category-encoders>=2.6.3",
    "pydantic>=2.6.3",
    "deepchecks>=0.18.1",
    "joblib>=1.3.2",
    "rich>=13.7.1",
    "seaborn>=0.13.2",
]
requires-python = "==3.9.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "black>=24.8.0",
    "isort>=5.13.2",
    "pre-commit>=3.8.0",
    "matplotlib>=3.9.1.post1",
    "mypy>=1.11.1",
    "jupyter>=1.0.0",
]
